@@ -19,6 +19,7 @@ Version 2.8
 - If unmarshalling of cached data fails the template will be
   reloaded now.
 - Implemented a block ``set`` tag.
+- Default cache size was incrased to 400 from a low 50.
 
 Version 2.7.3
 -------------
